src/tests/testfiles/function-declarations/16.txt
Error at 1:14: ‘void’ must be the only parameter
int iojiofej(void, void a) {
             ^
Error at 1:20: Parameter has incomplete type
int iojiofej(void, void a) {
                   ^
